samples/_failures_safe/1761210599_5faebc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2cdcc22.c: In function ‘main’:
./samples/SAFE/__tmp_c2cdcc22.c:135:5: error: expected declaration or statement at end of input
  135 |     int choice;
      |     ^~~
